--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.279.0",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
